# n_body_animated

./: .gitignore  Cargo.toml  README.md  solar_system.json  test_f.json
src/: constants.rs  data_structs.rs  lib.rs  main.rs  mechanics.rs  utils.rs
