[package]
name = "n_body_animated"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = '1.0.192', features = ["derive"]}
serde_json = "1.0.108"
nalgebra = {version = '0.32.3', features = ['serde-serialize']}
approx = "0.5.1"
itertools = "0.12.0"
ode_solvers = "0.3.7"
plotters = "0.3.5"